parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> cabecalho bloco .
Rule 2     cabecalho -> PROGRAM ID ;
Rule 3     bloco -> parte_declaracoes parte_comandos
Rule 4     parte_declaracoes -> VAR lista_declaracoes
Rule 5     parte_declaracoes -> empty
Rule 6     lista_declaracoes -> lista_declaracoes declaracao
Rule 7     lista_declaracoes -> declaracao
Rule 8     declaracao -> lista_ids DOIS_PONTOS tipo ;
Rule 9     declaracao -> error DOIS_PONTOS tipo ;
Rule 10    lista_ids -> lista_ids , ID
Rule 11    lista_ids -> ID
Rule 12    tipo -> INTEGER
Rule 13    tipo -> BOOLEAN
Rule 14    parte_comandos -> BEGIN lista_comandos END
Rule 15    lista_comandos -> lista_comandos_nao_vazia
Rule 16    lista_comandos -> empty
Rule 17    lista_comandos_nao_vazia -> lista_comandos_nao_vazia ; comando
Rule 18    lista_comandos_nao_vazia -> comando
Rule 19    comando -> atribuicao
Rule 20    comando -> condicional
Rule 21    comando -> repeticao
Rule 22    comando -> chamada_read
Rule 23    comando -> chamada_write
Rule 24    comando -> comando_composto
Rule 25    comando_composto -> BEGIN lista_comandos END
Rule 26    atribuicao -> ID ATRIBUICAO expressao
Rule 27    condicional -> IF expressao THEN comando else_opcional
Rule 28    else_opcional -> ELSE comando
Rule 29    else_opcional -> empty
Rule 30    repeticao -> WHILE expressao DO comando
Rule 31    chamada_read -> READ ( lista_ids_read )
Rule 32    lista_ids_read -> lista_ids
Rule 33    lista_ids_read -> empty
Rule 34    chamada_write -> WRITE ( lista_exp_write )
Rule 35    chamada_write -> WRITE ( error )
Rule 36    lista_exp_write -> lista_expressoes
Rule 37    lista_exp_write -> empty
Rule 38    lista_expressoes -> lista_expressoes , expressao
Rule 39    lista_expressoes -> expressao
Rule 40    expressao -> expressao + expressao
Rule 41    expressao -> expressao - expressao
Rule 42    expressao -> expressao * expressao
Rule 43    expressao -> expressao DIV expressao
Rule 44    expressao -> expressao OR expressao
Rule 45    expressao -> expressao AND expressao
Rule 46    expressao -> expressao = expressao
Rule 47    expressao -> expressao DIFERENTE expressao
Rule 48    expressao -> expressao MENOR expressao
Rule 49    expressao -> expressao MENOR_IGUAL expressao
Rule 50    expressao -> expressao MAIOR expressao
Rule 51    expressao -> expressao MAIOR_IGUAL expressao
Rule 52    expressao -> NOT expressao
Rule 53    expressao -> - expressao
Rule 54    expressao -> ( expressao )
Rule 55    expressao -> fator
Rule 56    fator -> ID
Rule 57    fator -> NUM
Rule 58    fator -> TRUE
Rule 59    fator -> FALSE
Rule 60    cabecalho -> error ID ;
Rule 61    cabecalho -> PROGRAM error ;
Rule 62    cabecalho -> PROGRAM ID error
Rule 63    parte_comandos -> error lista_comandos END
Rule 64    parte_comandos -> BEGIN lista_comandos error
Rule 65    empty -> <empty>

Terminals, with rules where they appear

(                    : 31 34 35 54
)                    : 31 34 35 54
*                    : 42
+                    : 40
,                    : 10 38
-                    : 41 53
.                    : 1
;                    : 2 8 9 17 60 61
=                    : 46
AND                  : 45
ATRIBUICAO           : 26
BEGIN                : 14 25 64
BOOLEAN              : 13
DIFERENTE            : 47
DIV                  : 43
DO                   : 30
DOIS_PONTOS          : 8 9
ELSE                 : 28
END                  : 14 25 63
FALSE                : 59
ID                   : 2 10 11 26 56 60 62
IF                   : 27
INTEGER              : 12
MAIOR                : 50
MAIOR_IGUAL          : 51
MENOR                : 48
MENOR_IGUAL          : 49
NOT                  : 52
NUM                  : 57
OR                   : 44
PROGRAM              : 2 61 62
READ                 : 31
THEN                 : 27
TRUE                 : 58
VAR                  : 4
WHILE                : 30
WRITE                : 34 35
error                : 9 35 60 61 62 63 64

Nonterminals, with rules where they appear

atribuicao           : 19
bloco                : 1
cabecalho            : 1
chamada_read         : 22
chamada_write        : 23
comando              : 17 18 27 28 30
comando_composto     : 24
condicional          : 20
declaracao           : 6 7
else_opcional        : 27
empty                : 5 16 29 33 37
expressao            : 26 27 30 38 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 53 54
fator                : 55
lista_comandos       : 14 25 63 64
lista_comandos_nao_vazia : 15 17
lista_declaracoes    : 4 6
lista_exp_write      : 34
lista_expressoes     : 36 38
lista_ids            : 8 10 32
lista_ids_read       : 31
parte_comandos       : 3
parte_declaracoes    : 3
programa             : 0
repeticao            : 21
tipo                 : 8 9

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . cabecalho bloco .
    (2) cabecalho -> . PROGRAM ID ;
    (60) cabecalho -> . error ID ;
    (61) cabecalho -> . PROGRAM error ;
    (62) cabecalho -> . PROGRAM ID error

    PROGRAM         shift and go to state 3
    error           shift and go to state 4

    programa                       shift and go to state 1
    cabecalho                      shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> cabecalho . bloco .
    (3) bloco -> . parte_declaracoes parte_comandos
    (4) parte_declaracoes -> . VAR lista_declaracoes
    (5) parte_declaracoes -> . empty
    (65) empty -> .

    VAR             shift and go to state 7
    BEGIN           reduce using rule 65 (empty -> .)
    error           reduce using rule 65 (empty -> .)

    bloco                          shift and go to state 5
    parte_declaracoes              shift and go to state 6
    empty                          shift and go to state 8

state 3

    (2) cabecalho -> PROGRAM . ID ;
    (61) cabecalho -> PROGRAM . error ;
    (62) cabecalho -> PROGRAM . ID error

    ID              shift and go to state 9
    error           shift and go to state 10


state 4

    (60) cabecalho -> error . ID ;

    ID              shift and go to state 11


state 5

    (1) programa -> cabecalho bloco . .

    .               shift and go to state 12


state 6

    (3) bloco -> parte_declaracoes . parte_comandos
    (14) parte_comandos -> . BEGIN lista_comandos END
    (63) parte_comandos -> . error lista_comandos END
    (64) parte_comandos -> . BEGIN lista_comandos error

    BEGIN           shift and go to state 14
    error           shift and go to state 15

    parte_comandos                 shift and go to state 13

state 7

    (4) parte_declaracoes -> VAR . lista_declaracoes
    (6) lista_declaracoes -> . lista_declaracoes declaracao
    (7) lista_declaracoes -> . declaracao
    (8) declaracao -> . lista_ids DOIS_PONTOS tipo ;
    (9) declaracao -> . error DOIS_PONTOS tipo ;
    (10) lista_ids -> . lista_ids , ID
    (11) lista_ids -> . ID

    error           shift and go to state 19
    ID              shift and go to state 20

    lista_declaracoes              shift and go to state 16
    declaracao                     shift and go to state 17
    lista_ids                      shift and go to state 18

state 8

    (5) parte_declaracoes -> empty .

    BEGIN           reduce using rule 5 (parte_declaracoes -> empty .)
    error           reduce using rule 5 (parte_declaracoes -> empty .)


state 9

    (2) cabecalho -> PROGRAM ID . ;
    (62) cabecalho -> PROGRAM ID . error

    ;               shift and go to state 21
    error           shift and go to state 22


state 10

    (61) cabecalho -> PROGRAM error . ;

    ;               shift and go to state 23


state 11

    (60) cabecalho -> error ID . ;

    ;               shift and go to state 24


state 12

    (1) programa -> cabecalho bloco . .

    $end            reduce using rule 1 (programa -> cabecalho bloco . .)


state 13

    (3) bloco -> parte_declaracoes parte_comandos .

    .               reduce using rule 3 (bloco -> parte_declaracoes parte_comandos .)


state 14

    (14) parte_comandos -> BEGIN . lista_comandos END
    (64) parte_comandos -> BEGIN . lista_comandos error
    (15) lista_comandos -> . lista_comandos_nao_vazia
    (16) lista_comandos -> . empty
    (17) lista_comandos_nao_vazia -> . lista_comandos_nao_vazia ; comando
    (18) lista_comandos_nao_vazia -> . comando
    (65) empty -> .
    (19) comando -> . atribuicao
    (20) comando -> . condicional
    (21) comando -> . repeticao
    (22) comando -> . chamada_read
    (23) comando -> . chamada_write
    (24) comando -> . comando_composto
    (26) atribuicao -> . ID ATRIBUICAO expressao
    (27) condicional -> . IF expressao THEN comando else_opcional
    (30) repeticao -> . WHILE expressao DO comando
    (31) chamada_read -> . READ ( lista_ids_read )
    (34) chamada_write -> . WRITE ( lista_exp_write )
    (35) chamada_write -> . WRITE ( error )
    (25) comando_composto -> . BEGIN lista_comandos END

    END             reduce using rule 65 (empty -> .)
    error           reduce using rule 65 (empty -> .)
    ID              shift and go to state 36
    IF              shift and go to state 37
    WHILE           shift and go to state 38
    READ            shift and go to state 39
    WRITE           shift and go to state 40
    BEGIN           shift and go to state 25

    lista_comandos                 shift and go to state 26
    lista_comandos_nao_vazia       shift and go to state 27
    empty                          shift and go to state 28
    comando                        shift and go to state 29
    atribuicao                     shift and go to state 30
    condicional                    shift and go to state 31
    repeticao                      shift and go to state 32
    chamada_read                   shift and go to state 33
    chamada_write                  shift and go to state 34
    comando_composto               shift and go to state 35

state 15

    (63) parte_comandos -> error . lista_comandos END
    (15) lista_comandos -> . lista_comandos_nao_vazia
    (16) lista_comandos -> . empty
    (17) lista_comandos_nao_vazia -> . lista_comandos_nao_vazia ; comando
    (18) lista_comandos_nao_vazia -> . comando
    (65) empty -> .
    (19) comando -> . atribuicao
    (20) comando -> . condicional
    (21) comando -> . repeticao
    (22) comando -> . chamada_read
    (23) comando -> . chamada_write
    (24) comando -> . comando_composto
    (26) atribuicao -> . ID ATRIBUICAO expressao
    (27) condicional -> . IF expressao THEN comando else_opcional
    (30) repeticao -> . WHILE expressao DO comando
    (31) chamada_read -> . READ ( lista_ids_read )
    (34) chamada_write -> . WRITE ( lista_exp_write )
    (35) chamada_write -> . WRITE ( error )
    (25) comando_composto -> . BEGIN lista_comandos END

    END             reduce using rule 65 (empty -> .)
    ID              shift and go to state 36
    IF              shift and go to state 37
    WHILE           shift and go to state 38
    READ            shift and go to state 39
    WRITE           shift and go to state 40
    BEGIN           shift and go to state 25

    lista_comandos                 shift and go to state 41
    lista_comandos_nao_vazia       shift and go to state 27
    empty                          shift and go to state 28
    comando                        shift and go to state 29
    atribuicao                     shift and go to state 30
    condicional                    shift and go to state 31
    repeticao                      shift and go to state 32
    chamada_read                   shift and go to state 33
    chamada_write                  shift and go to state 34
    comando_composto               shift and go to state 35

state 16

    (4) parte_declaracoes -> VAR lista_declaracoes .
    (6) lista_declaracoes -> lista_declaracoes . declaracao
    (8) declaracao -> . lista_ids DOIS_PONTOS tipo ;
    (9) declaracao -> . error DOIS_PONTOS tipo ;
    (10) lista_ids -> . lista_ids , ID
    (11) lista_ids -> . ID

  ! shift/reduce conflict for error resolved as shift
    BEGIN           reduce using rule 4 (parte_declaracoes -> VAR lista_declaracoes .)
    error           shift and go to state 19
    ID              shift and go to state 20

  ! error           [ reduce using rule 4 (parte_declaracoes -> VAR lista_declaracoes .) ]

    declaracao                     shift and go to state 42
    lista_ids                      shift and go to state 18

state 17

    (7) lista_declaracoes -> declaracao .

    error           reduce using rule 7 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 7 (lista_declaracoes -> declaracao .)
    BEGIN           reduce using rule 7 (lista_declaracoes -> declaracao .)


state 18

    (8) declaracao -> lista_ids . DOIS_PONTOS tipo ;
    (10) lista_ids -> lista_ids . , ID

    DOIS_PONTOS     shift and go to state 43
    ,               shift and go to state 44


state 19

    (9) declaracao -> error . DOIS_PONTOS tipo ;

    DOIS_PONTOS     shift and go to state 45


state 20

    (11) lista_ids -> ID .

    DOIS_PONTOS     reduce using rule 11 (lista_ids -> ID .)
    ,               reduce using rule 11 (lista_ids -> ID .)
    )               reduce using rule 11 (lista_ids -> ID .)


state 21

    (2) cabecalho -> PROGRAM ID ; .

    VAR             reduce using rule 2 (cabecalho -> PROGRAM ID ; .)
    BEGIN           reduce using rule 2 (cabecalho -> PROGRAM ID ; .)
    error           reduce using rule 2 (cabecalho -> PROGRAM ID ; .)


state 22

    (62) cabecalho -> PROGRAM ID error .

    VAR             reduce using rule 62 (cabecalho -> PROGRAM ID error .)
    BEGIN           reduce using rule 62 (cabecalho -> PROGRAM ID error .)
    error           reduce using rule 62 (cabecalho -> PROGRAM ID error .)


state 23

    (61) cabecalho -> PROGRAM error ; .

    VAR             reduce using rule 61 (cabecalho -> PROGRAM error ; .)
    BEGIN           reduce using rule 61 (cabecalho -> PROGRAM error ; .)
    error           reduce using rule 61 (cabecalho -> PROGRAM error ; .)


state 24

    (60) cabecalho -> error ID ; .

    VAR             reduce using rule 60 (cabecalho -> error ID ; .)
    BEGIN           reduce using rule 60 (cabecalho -> error ID ; .)
    error           reduce using rule 60 (cabecalho -> error ID ; .)


state 25

    (25) comando_composto -> BEGIN . lista_comandos END
    (15) lista_comandos -> . lista_comandos_nao_vazia
    (16) lista_comandos -> . empty
    (17) lista_comandos_nao_vazia -> . lista_comandos_nao_vazia ; comando
    (18) lista_comandos_nao_vazia -> . comando
    (65) empty -> .
    (19) comando -> . atribuicao
    (20) comando -> . condicional
    (21) comando -> . repeticao
    (22) comando -> . chamada_read
    (23) comando -> . chamada_write
    (24) comando -> . comando_composto
    (26) atribuicao -> . ID ATRIBUICAO expressao
    (27) condicional -> . IF expressao THEN comando else_opcional
    (30) repeticao -> . WHILE expressao DO comando
    (31) chamada_read -> . READ ( lista_ids_read )
    (34) chamada_write -> . WRITE ( lista_exp_write )
    (35) chamada_write -> . WRITE ( error )
    (25) comando_composto -> . BEGIN lista_comandos END

    END             reduce using rule 65 (empty -> .)
    ID              shift and go to state 36
    IF              shift and go to state 37
    WHILE           shift and go to state 38
    READ            shift and go to state 39
    WRITE           shift and go to state 40
    BEGIN           shift and go to state 25

    lista_comandos                 shift and go to state 46
    lista_comandos_nao_vazia       shift and go to state 27
    empty                          shift and go to state 28
    comando                        shift and go to state 29
    atribuicao                     shift and go to state 30
    condicional                    shift and go to state 31
    repeticao                      shift and go to state 32
    chamada_read                   shift and go to state 33
    chamada_write                  shift and go to state 34
    comando_composto               shift and go to state 35

state 26

    (14) parte_comandos -> BEGIN lista_comandos . END
    (64) parte_comandos -> BEGIN lista_comandos . error

    END             shift and go to state 47
    error           shift and go to state 48


state 27

    (15) lista_comandos -> lista_comandos_nao_vazia .
    (17) lista_comandos_nao_vazia -> lista_comandos_nao_vazia . ; comando

    END             reduce using rule 15 (lista_comandos -> lista_comandos_nao_vazia .)
    error           reduce using rule 15 (lista_comandos -> lista_comandos_nao_vazia .)
    ;               shift and go to state 49


state 28

    (16) lista_comandos -> empty .

    END             reduce using rule 16 (lista_comandos -> empty .)
    error           reduce using rule 16 (lista_comandos -> empty .)


state 29

    (18) lista_comandos_nao_vazia -> comando .

    ;               reduce using rule 18 (lista_comandos_nao_vazia -> comando .)
    END             reduce using rule 18 (lista_comandos_nao_vazia -> comando .)
    error           reduce using rule 18 (lista_comandos_nao_vazia -> comando .)


state 30

    (19) comando -> atribuicao .

    ;               reduce using rule 19 (comando -> atribuicao .)
    END             reduce using rule 19 (comando -> atribuicao .)
    error           reduce using rule 19 (comando -> atribuicao .)
    ELSE            reduce using rule 19 (comando -> atribuicao .)


state 31

    (20) comando -> condicional .

    ;               reduce using rule 20 (comando -> condicional .)
    END             reduce using rule 20 (comando -> condicional .)
    error           reduce using rule 20 (comando -> condicional .)
    ELSE            reduce using rule 20 (comando -> condicional .)


state 32

    (21) comando -> repeticao .

    ;               reduce using rule 21 (comando -> repeticao .)
    END             reduce using rule 21 (comando -> repeticao .)
    error           reduce using rule 21 (comando -> repeticao .)
    ELSE            reduce using rule 21 (comando -> repeticao .)


state 33

    (22) comando -> chamada_read .

    ;               reduce using rule 22 (comando -> chamada_read .)
    END             reduce using rule 22 (comando -> chamada_read .)
    error           reduce using rule 22 (comando -> chamada_read .)
    ELSE            reduce using rule 22 (comando -> chamada_read .)


state 34

    (23) comando -> chamada_write .

    ;               reduce using rule 23 (comando -> chamada_write .)
    END             reduce using rule 23 (comando -> chamada_write .)
    error           reduce using rule 23 (comando -> chamada_write .)
    ELSE            reduce using rule 23 (comando -> chamada_write .)


state 35

    (24) comando -> comando_composto .

    ;               reduce using rule 24 (comando -> comando_composto .)
    END             reduce using rule 24 (comando -> comando_composto .)
    error           reduce using rule 24 (comando -> comando_composto .)
    ELSE            reduce using rule 24 (comando -> comando_composto .)


state 36

    (26) atribuicao -> ID . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 50


state 37

    (27) condicional -> IF . expressao THEN comando else_opcional
    (40) expressao -> . expressao + expressao
    (41) expressao -> . expressao - expressao
    (42) expressao -> . expressao * expressao
    (43) expressao -> . expressao DIV expressao
    (44) expressao -> . expressao OR expressao
    (45) expressao -> . expressao AND expressao
    (46) expressao -> . expressao = expressao
    (47) expressao -> . expressao DIFERENTE expressao
    (48) expressao -> . expressao MENOR expressao
    (49) expressao -> . expressao MENOR_IGUAL expressao
    (50) expressao -> . expressao MAIOR expressao
    (51) expressao -> . expressao MAIOR_IGUAL expressao
    (52) expressao -> . NOT expressao
    (53) expressao -> . - expressao
    (54) expressao -> . ( expressao )
    (55) expressao -> . fator
    (56) fator -> . ID
    (57) fator -> . NUM
    (58) fator -> . TRUE
    (59) fator -> . FALSE

    NOT             shift and go to state 53
    -               shift and go to state 52
    (               shift and go to state 54
    ID              shift and go to state 56
    NUM             shift and go to state 57
    TRUE            shift and go to state 58
    FALSE           shift and go to state 59

    expressao                      shift and go to state 51
    fator                          shift and go to state 55

state 38

    (30) repeticao -> WHILE . expressao DO comando
    (40) expressao -> . expressao + expressao
    (41) expressao -> . expressao - expressao
    (42) expressao -> . expressao * expressao
    (43) expressao -> . expressao DIV expressao
    (44) expressao -> . expressao OR expressao
    (45) expressao -> . expressao AND expressao
    (46) expressao -> . expressao = expressao
    (47) expressao -> . expressao DIFERENTE expressao
    (48) expressao -> . expressao MENOR expressao
    (49) expressao -> . expressao MENOR_IGUAL expressao
    (50) expressao -> . expressao MAIOR expressao
    (51) expressao -> . expressao MAIOR_IGUAL expressao
    (52) expressao -> . NOT expressao
    (53) expressao -> . - expressao
    (54) expressao -> . ( expressao )
    (55) expressao -> . fator
    (56) fator -> . ID
    (57) fator -> . NUM
    (58) fator -> . TRUE
    (59) fator -> . FALSE

    NOT             shift and go to state 53
    -               shift and go to state 52
    (               shift and go to state 54
    ID              shift and go to state 56
    NUM             shift and go to state 57
    TRUE            shift and go to state 58
    FALSE           shift and go to state 59

    expressao                      shift and go to state 60
    fator                          shift and go to state 55

state 39

    (31) chamada_read -> READ . ( lista_ids_read )

    (               shift and go to state 61


state 40

    (34) chamada_write -> WRITE . ( lista_exp_write )
    (35) chamada_write -> WRITE . ( error )

    (               shift and go to state 62


state 41

    (63) parte_comandos -> error lista_comandos . END

    END             shift and go to state 63


state 42

    (6) lista_declaracoes -> lista_declaracoes declaracao .

    error           reduce using rule 6 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 6 (lista_declaracoes -> lista_declaracoes declaracao .)
    BEGIN           reduce using rule 6 (lista_declaracoes -> lista_declaracoes declaracao .)


state 43

    (8) declaracao -> lista_ids DOIS_PONTOS . tipo ;
    (12) tipo -> . INTEGER
    (13) tipo -> . BOOLEAN

    INTEGER         shift and go to state 65
    BOOLEAN         shift and go to state 66

    tipo                           shift and go to state 64

state 44

    (10) lista_ids -> lista_ids , . ID

    ID              shift and go to state 67


state 45

    (9) declaracao -> error DOIS_PONTOS . tipo ;
    (12) tipo -> . INTEGER
    (13) tipo -> . BOOLEAN

    INTEGER         shift and go to state 65
    BOOLEAN         shift and go to state 66

    tipo                           shift and go to state 68

state 46

    (25) comando_composto -> BEGIN lista_comandos . END

    END             shift and go to state 69


state 47

    (14) parte_comandos -> BEGIN lista_comandos END .

    .               reduce using rule 14 (parte_comandos -> BEGIN lista_comandos END .)


state 48

    (64) parte_comandos -> BEGIN lista_comandos error .

    .               reduce using rule 64 (parte_comandos -> BEGIN lista_comandos error .)


state 49
